--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <title>Unit-Storage</title>
     <link href="style.css" rel="stylesheet">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-SVWRMBS059"></script>
+<!-- Google tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QPYFY7N820"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-SVWRMBS059');
+  gtag('config', 'G-QPYFY7N820');
 </script>
 
 <!-- End Google Analytics -->
@@ -58,7 +58,7 @@
                         <div class="col-lg-6 rel">
                             <ul>
                                 <li><a>Get matched up</a></li>
-                                <li><a href="javascript:void(0);" data-toggle="modal" data-target="#exampleModal">REGISTER NOW</a></li>
+                                <li><a href="https://calendly.com/unit_storageapp" data-toggle="modal" data-target="#exampleModal">REGISTER NOW</a></li>
                             </ul>
                         </div>
                     </div>
