disabling modals, enabling calendly

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <div class="col-lg-6 rel">
                             <ul>
                                 <li><a>Get matched up</a></li>
-                                <li><a href="https://calendly.com/unit_storageapp" data-toggle="modal" data-target="#exampleModal">REGISTER NOW</a></li>
+                                <li><a href="https://calendly.com/unit_storageapp">REGISTER NOW</a></li>
                             </ul>
                         </div>
                     </div>
@@ -239,7 +239,7 @@
                                     <li><a href="">BOOK A SPACE</a></li>
                                     <li><a href="">HELP CENTRE</a></li>
                                 </ul> -->
-                                <div class="registerlink"><a href="" data-toggle="modal" data-target="#exampleModal">REGISTER NOW</a></div>
+                                <div class="registerlink"><a href="https://calendly.com/unit_storageapp">REGISTER NOW</a></div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-xs-12">
